feat: add deploy character api
